<resources>
    <string name="app_name">ShoeStore</string>

    <string name="welcome_text_1">Welcome to my store!</string>
    <string name="welcome_text_2">Click Next to read Instruction!</string>
    <string name="instructions_text_1">This is instructions</string>
    <string name="instructions_text_2">Explore it by yourself :D</string>
    <string name="next_button">Next</string>
    <string name="logout">Logout</string>
    <string name="shoe_list">Shoe List</string>
    <string name="empty_list">No shoes to display.</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_company">Company: %s</string>
    <string name="shoe_size">Shoe size: %.1f</string>
    <string name="shoe_description">Description: %s</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="shoe_detail_company">Company</string>
    <string name="shoe_detail_size">Shoe size</string>
    <string name="shoe_detail_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="empty_fields_warning">Please fill all fields</string>
</resources>
